deployment_package/k8s/cudnt-accelerator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cudnt-accelerator
  namespace: chaios-platform
spec:
  ports:
  - port: 8005
    targetPort: 8005
  selector:
    app: cudnt-accelerator
