deployment_package/k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: chaios-platform
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
